Removed whitespace collapse prevention in favor of <br> usage in articles

--- a/resources/stylesheets/main.css
+++ b/resources/stylesheets/main.css
@@ -122,7 +122,6 @@ article #article-content {
 	font-weight: 500;
 	font-size: 1.5em;
 	width: 24em;
-	white-space-collapse: preserve;
 }
 
 article #article-content em {
